# LeptSound

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build.yml
include/: DiscPlayer.h  SoundManager.h  common.h  player_conf.h  record_manager.h  record_player.h  turntable.h
src/: SoundManager.cc  record_manager.cc  record_player.cc  turntable.cc
